--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>React App</title>
+    <title>Ico-sunshine</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
