--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <script src="https://kit.fontawesome.com/878eab2d6a.js" crossorigin="anonymous"></script>
     <title>Ico-sunshine</title>
   </head>
   <body>
