--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ico-sunshine"
+      image="./fabicon.png"
     />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
@@ -31,6 +32,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <script src="https://kit.fontawesome.com/878eab2d6a.js" crossorigin="anonymous"></script>
+    <script src="../src/componentes/navbar/mostrarmenu.js"></script>
     <title>Ico-sunshine</title>
   </head>
   <body>
