se acaba particles js

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!-----------------------------------CND DE PARTICULAS JS ----------------------------------------->
+   
     <script src="https://kit.fontawesome.com/878eab2d6a.js" crossorigin="anonymous"></script>
     <script src="../src/componentes/navbar/mostrarmenu.js"></script>
     <title>Ico-sunshine</title>
