se agrega funcion para que modales se cierren con el boton de atras en web y moviles

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       image="./fabicon.png"
     />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
@@ -37,7 +38,7 @@
     <script src="../src/componentes/navbar/mostrarmenu.js"></script>
     <title>Ico-sunshine</title>
   </head>
-  <body>
+  <body class="bootstrap-fs-modal">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -50,7 +51,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-   <script>
+   
      
    </script> 
   </body>
