--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Ico-sunshine"
       image="./fabicon.png"
     />
+    <meta property="og:url" content="https://sunshine-imagine.io/" />
     <meta name="image" property="og:image" content="./fabicon.png"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     
