--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Ico-sunshine"
+      content="sunshine-imagine"
       image="./fabicon.png"
     />
     <meta property="og:url" content="https://sunshine-imagine.io/" />
@@ -38,7 +38,7 @@
    
     <script src="https://kit.fontawesome.com/878eab2d6a.js" crossorigin="anonymous"></script>
     <script src="../src/componentes/navbar/mostrarmenu.js"></script>
-    <title>Ico-sunshine</title>
+    <title>sunshine-imagine.io</title>
   </head>
   <body class="bootstrap-fs-modal">
     <noscript>You need to enable JavaScript to run this app.</noscript>
