--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <script src="https://kit.fontawesome.com/878eab2d6a.js" crossorigin="anonymous"></script>
     <title>Ico-sunshine</title>
 </head>
-<body>
+<body class="bootstrap-fs-modal">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 <!--
