se arregla etiqueta meta

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             image="./fabicon.png"
     />
     <meta property="og:url" content="https://sunshine-imagine.io/"/>
-    <meta name="image" property="og:image" content="./fabicon.png"/>
+    <meta name="image" property="og:image" content="./fabicon.png" itemprop="image" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
 
